# biosym

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .ruff.toml  README.md  _tasks.py  main.py  pyproject.toml
.github/workflows/: docs.yml  lint.yml  publish.yml  test-and-lint.yml  test.yml
Data/Subject_01/: README.txt  gait_avg_grf.csv  gait_avg_joint_angles.csv
Data/Subject_01/ID/: Subject1_trial1_external_forces.xml  Subject1_trial1_grf.mot  Subject1_trial1_id_setup.xml  Subject1_trial2_external_forces.xml  Subject1_trial2_grf.mot  Subject1_trial2_id_setup.xml  Subject1_trial3_external_forces.xml  Subject1_trial3_grf.mot  Subject1_trial3_id_setup.xml  Subject1_trial4_external_forces.xml  Subject1_trial4_grf.mot  Subject1_trial4_id_setup.xml  Subject1_trial5_external_forces.xml  Subject1_trial5_grf.mot  Subject1_trial5_id_setup.xml  Subject1_trial6_external_forces.xml  Subject1_trial6_grf.mot  Subject1_trial6_id_setup.xml
Data/Subject_01/IK/: Subject1_trial1_ik_setup.xml  Subject1_trial1_ik_summary.txt  Subject1_trial2_ik.mot  Subject1_trial2_ik_setup.xml  Subject1_trial2_ik_summary.txt  Subject1_trial3_ik.mot  Subject1_trial3_ik_setup.xml  Subject1_trial3_ik_summary.txt  Subject1_trial4_ik.mot  Subject1_trial4_ik_setup.xml  Subject1_trial4_ik_summary.txt  Subject1_trial5_ik.mot  Subject1_trial5_ik_setup.xml  Subject1_trial5_ik_summary.txt  Subject1_trial6_ik.mot  Subject1_trial6_ik_setup.xml  Subject1_trial6_ik_summary.txt
Data/Subject_01/Models/: final.mat  final.osim  final_momentarms.mat  optimized_scale_and_markers.osim  rescaling_setup.xml  unscaled_but_with_optimized_markers.osim  unscaled_generic.osim
Data/Subject_02/: README.txt
Data/Subject_02/ID/: Subject2_trial1_external_forces.xml  Subject2_trial1_grf.mot  Subject2_trial1_id_setup.xml  Subject2_trial2_external_forces.xml  Subject2_trial2_grf.mot  Subject2_trial2_id_setup.xml
Data/Subject_02/IK/: Subject2_trial1_ik.mot  Subject2_trial1_ik_setup.xml  Subject2_trial1_ik_summary.txt  Subject2_trial2_ik.mot  Subject2_trial2_ik_setup.xml  Subject2_trial2_ik_summary.txt
Data/Subject_02/Models/: final.mat  final.osim  final_momentarms.mat  optimized_scale_and_markers.osim  rescaling_setup.xml  unscaled_but_with_optimized_markers.osim
Data/Subject_03/: README.txt
Data/Subject_03/ID/: Subject3_trial1_external_forces.xml  Subject3_trial1_id_setup.xml  Subject3_trial2_external_forces.xml  Subject3_trial2_grf.mot  Subject3_trial2_id_setup.xml  Subject3_trial3_external_forces.xml  Subject3_trial3_id_setup.xml  Subject3_trial4_external_forces.xml  Subject3_trial4_id_setup.xml  Subject3_trial5_external_forces.xml  Subject3_trial5_id_setup.xml  Subject3_trial6_external_forces.xml  Subject3_trial6_id_setup.xml
biosym/constraints/: __init__.py  actuators.py  adaptive_h.py  base_constraint.py  discretization.py  dynamics.py  dynamics_unified.py  ground_contact.py  periodicity.py  speed.py
biosym/forward/: simulation.py
biosym/model/: model.py
biosym/objectives/: __init__.py  acceleration_term.py  base_objective.py  dash_logger.py  effort_term.py  iteration_logger.py  jerk_term.py  minimize_torques.py  regularization.py  torque_term.py  track_angles.py  track_grf.py  track_grfs.py  track_markers.py
biosym/ocp/: collocation.py  confun.py  dash_logger.py  iteration_logger.py  objfun.py  utils.py
biosym/utils/: __init__.py  read_write_files.py  segment_gait_cycles.py  standing_markers.py  states.py
biosym/visualization/: stickfigure.py
docs/: .gitignore  conf.py  index.rst  requirements.txt
docs/api/: biosym.constraints.actuators.rst  biosym.constraints.adaptive_h.rst  biosym.constraints.base_constraint.rst  biosym.constraints.discretization.rst  biosym.constraints.dynamics.rst  biosym.constraints.ground_contact.rst  biosym.constraints.periodicity.rst  biosym.constraints.rst  biosym.constraints.speed.rst  biosym.model.model.rst  biosym.objectives.base_objective.rst  biosym.objectives.jerk_term.rst  biosym.objectives.rst  biosym.objectives.torque_term.rst  biosym.ocp.collocation.rst  biosym.ocp.confun.rst  biosym.ocp.objfun.rst  biosym.rst  biosym.utils.states.rst  modules.rst
docs/auto_examples/: batching.codeobj.json  batching.ipynb  batching.py.md5  batching.rst  gait2d.codeobj.json  gait2d.ipynb  gait2d.py  gait2d.py.md5  gait2d.rst  index.rst  interacting_with_models.codeobj.json  interacting_with_models.ipynb  interacting_with_models.py  interacting_with_models.py.md5  interacting_with_models.rst  plot_advanced_gait_analysis.codeobj.json  plot_advanced_gait_analysis.ipynb  plot_advanced_gait_analysis.py  plot_advanced_gait_analysis.rst  plot_basic_model_usage.codeobj.json  plot_basic_model_usage.ipynb  plot_basic_model_usage.py  plot_basic_model_usage.rst  plot_model_comparison_optimization.codeobj.json  plot_model_comparison_optimization.ipynb  plot_model_comparison_optimization.py  plot_model_comparison_optimization.rst  plot_model_documentation.codeobj.json  plot_model_documentation.ipynb  plot_model_documentation.py  plot_model_documentation.rst  plot_simple_pendulum_demo.codeobj.json  plot_simple_pendulum_demo.ipynb  plot_simple_pendulum_demo.py  plot_simple_pendulum_demo.rst  plot_working_interface.codeobj.json  plot_working_interface.ipynb  plot_working_interface.py  plot_working_interface.rst  test_examples.codeobj.json  (+3 more)
docs/guides/: index.rst
docs/modules/: actuators.rst  constraints.rst  contact.rst  index.rst  model.rst  objectives.rst  ocp.rst  utils.rst  visualization.rst
docs/sphinxext/: githublink.py
example_data/: gait_avg_joint_angles.mot
example_data/Subject_01/: ik_data.mot
examples/: README.rst  batching.py  gait2d.py  standing2d.yaml  walking2d.yaml
notebooks/: collocation_outputs.ipynb  dl.ipynb  network.py  testing.ipynb
scripts/: segment_gait_cycles.py  update_coverage_badge.py
tests/: __init__.py  test_01_model.py  test_collocation.py  test_forwardsim.py  test_model.py  test_plotting.py
tests/collocation/: standing2d.yaml  walking2d.yaml
tests/models/: pendulum.xml  pendulum_3d.xml
tests/test_models/: pendulum.xml  pendulum_10.xml  pendulum_3d.xml
(+71 files in other folders)
