[project]
name = "biosym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py>=2.3.0",
    "black[jupyter]>=25.1.0",
    "cloudpickle>=3.1.1",
    "cyipopt>=1.5.0",
    "flatbuffers>=25.2.10",
    "flax>=0.8.5",
    "jax>=0.4.30",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.0",
    "pyyaml>=6.0.2",
    "ruff>=0.12.1",
    "sympy>=1.14.0",
    "tqdm>=4.67.1",
]

[tool.poe.tasks]
test = "python -m pytest tests/ -v"
test-cov = "python -m pytest tests/ -v --cov=biosym --cov-report=term-missing --cov-report=html --cov-report=xml"
lint = "ruff check ."
format_check = "ruff format --check ."
docs = "python _tasks.py docs"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
# Set matplotlib backend for testing
addopts = "--tb=short"
# You can also set env vars here if needed
env = [
    "MPLBACKEND=Agg",
]

[tool.coverage.run]
source = ["biosym"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
]
